✨ create join-subscription api
