# docs/swagger.json
@@ -154,6 +154,22 @@
                 }
             }
         },
+        "/subscriptions/{subscriptionId}/join": {
+            "post": {
+                "description": "join subscription",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "subscription"
+                ],
+                "summary": "Join Subscription",
+                "responses": {}
+            }
+        },
         "/users": {
             "get": {
                 "description": "read user",
