# entity/construct.go
@@ -1,0 +1,10 @@
+package entity
+
+import "github.com/jinzhu/gorm"
+
+type Construct struct {
+	gorm.Model
+	SubscriptionID uint       `column:"subscriptionId"`
+	Subscription Subscription
+	UserID string       			`column:"userId"`
+}
