# entity/user.go
@@ -9,7 +9,7 @@ type User struct {
 	Icon      *string        `column:"icon"`
 	Name      *string        `column:"name"`
 	Host      []Subscription `column:"host" gorm:"many2many:hosts"`
-	Construct []Subscription `column:"contract" gorm:"many2many:constructs"`
+	Construct []Construct    `column:"construct"`
 	CreatedAt time.Time      `column:"created_at"`
 	UpdatedAt time.Time      `column:"updated_at"`
 	DeletedAt *time.Time     `column:"deleted_at"`
